Получение случайного персонажа по кнопке, исправление некоторых ошибок, формирование блока с 9-ю персонажами с обращением к серверу

--- a/src/components/char/char.scss
+++ b/src/components/char/char.scss
@@ -27,6 +27,11 @@
            object-fit: cover;
            transform: translate(-15px, -15px);
        }
+       &_empty-img{
+         img{
+         object-fit: unset;
+         }
+       }
        &_selected {
            box-shadow: 0 5px 20px $main-color;
            transform: translateY(-8px);
