--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -13,6 +13,9 @@
        width: 180px;
        height: 180px;
        object-fit: cover;
+       &_empty{
+         object-fit: unset;
+       }
    }
    &__info {
        display: grid;
