По клику на персонажа открывается его подробная информация в правой части страницы со списком комиксов

--- a/src/components/char/char.scss
+++ b/src/components/char/char.scss
@@ -69,6 +69,11 @@
            height: 150px;
            object-fit: cover;
        }
+       &_empty-img{
+         img{
+         object-fit: unset;
+         }
+       }
    }
    &__btns {
        margin-top: 35px;
